Fixed more overlapping bugs in the home release list

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,10 +1,6 @@
-.homepage {
-	h1 {
-		margin-top:26px;
-	}
-}
 #overflow {
 	overflow:hidden;
+	height:394px;
 		#releases {
 			margin-top:34px;
 			max-height:330px;
@@ -31,71 +27,79 @@
 							-o-transform: scale(1.1);
 							-ms-transform: scale(1.1);
 							z-index:1000;
-							@include box-shadow(0px 0px 0px 3px rgba(220,90,36,1),5px 6px 15px rgba(0,0,0,0.5));
+							@include box-shadow(0px 0px 0px 3px rgba(220,90,36,1),5px 6px 15px rgba(0,0,0,0.4));
 						}
 				}
 				
 		}
 }
-.signup-home {
-	margin:40px 0 34px;
-	text-align:center;
-	.btn-warning {
-		margin-left:10px;
+.homepage {
+	h1 {
+		margin-top:26px;
 	}
-}
-.sections {
-	p {
-		margin-top:16px;
+	.signup-home {
+		margin:40px 0 34px;
+		text-align:center;
+		.btn-warning {
+			margin-left:10px;
+		}
+		&:first-child {
+			margin:10px 0 34px;
+		}
 	}
-	.section {
-		border-top:1px solid #d1d1d1;
-		@extend .center;
-		margin:0 auto;
-		max-width:980px;
-		overflow:hidden;
-			&:last-child {
-				border-bottom:1px solid #d1d1d1;
-			}
-			&:nth-child(odd) > .col:first-child {
-				float:left;
-				width:400px;
-			}
-			&:nth-child(odd) > .col:last-child {
-				float:right;
-			}
-			&:nth-child(even) > .col:first-child {
-				float:left;
-			}
-			&:nth-child(even) > .col:last-child {
-				float:left;
-				width:400px;
-				margin-left:80px;
-			}
-			.follow {
-				margin-top:96px;
-			}
-			.connect {
-				margin-top:91px;
-			}
-			.discover {
-				margin-top:74px;
-			}
-			.date {
-				margin-top: 127px;
-			}
+	.sections {
+		p {
+			margin-top:16px;
+		}
+		.section {
+			border-top:1px solid #d1d1d1;
+			@extend .center;
+			margin:0 auto;
+			max-width:980px;
+			overflow:hidden;
+				&:last-child {
+					border-bottom:1px solid #d1d1d1;
+				}
+				&:nth-child(odd) > .col:first-child {
+					float:left;
+					width:400px;
+				}
+				&:nth-child(odd) > .col:last-child {
+					float:right;
+				}
+				&:nth-child(even) > .col:first-child {
+					float:left;
+				}
+				&:nth-child(even) > .col:last-child {
+					float:left;
+					width:400px;
+					margin-left:80px;
+				}
+				.follow {
+					margin-top:96px;
+				}
+				.connect {
+					margin-top:91px;
+				}
+				.discover {
+					margin-top:74px;
+				}
+				.date {
+					margin-top: 127px;
+				}
+		}
 	}
-}
-.social_share {
-	margin-top:15px;
-	.twitter-share-button {
-		width: 88px !important;
-		margin-right: 5px;
-	}
-	.fb-like {
-		vertical-align: top;
-		margin-right: 10px;
-		margin-left: 28px;
-		width: 81px;
+	.social_share {
+		margin-top:15px;
+		.twitter-share-button {
+			width: 88px !important;
+			margin-right: 5px;
+		}
+		.fb-like {
+			vertical-align: top;
+			margin-right: 10px;
+			margin-left: 28px;
+			width: 81px;
+		}
 	}
 }
